<resources>
    <string name="app_name">布谷</string>
    <string name="tab_main">首页</string>
    <string name="tab_classify">分类</string>
    <string name="tab_message">消息</string>
    <string name="tab_mine">我的</string>
    <string name="loginString">登录</string>
    <string name="findPassword">忘记密码</string>
    <string name="singUp">新用户注册</string>
    <string name="frag_login_username_hint">请输入手机号码</string>
    <string name="frag_login_password_hint">请输入至少8位密码</string>
    <string name="frag_login_safety_hint">请输验证码</string>
    <string name="getting">正在获取</string>
    <string name="get_safety_code">获取验证码</string>
    <string name="get_safety_code_error">获取验证码失败</string>
    <string name="register_new_user">注册</string>
    <string name="str_user_not_sign">这个家伙很懒，什么也没留下...</string>
    <string name="str_user_notlogin_sign">登陆/注册</string>
    <string name="net_unlink">网络未连接</string>
    <string name="get_count_time">%ds后重新获取</string>
    <string name="get_code_error">获取失败</string>
    <string name="unkown_error">发生未知错误</string>
    <string name="verify_fail">验证失败,请重新获取</string>
    <string name="resigister_success">注册成功</string>
    <string name="logining">正在登陆...</string>
    <string name="login_fail">登陆失败,请检查用户名/密码</string>
    <string name="submit_info_error">提交信息有误</string>
    <string name="login_fail_while_register">请稍后重试</string>
    <string name="reset_passwrod">重置密码</string>
    <string name="btn_ok">确定</string>
    <string name="load_data_fail">没有数据</string>
    <string name="str_search">搜索</string>
    <string name="btn_cancle">取消</string>
    <string name="hine_search_by">搜索id/昵称/手机号</string>
    <string name="chat">聊天</string>
    <string name="addfriend">加好友</string>
    <string name="net_exception">网络异常</string>
    <string name="request_add_friend_title">添加好友</string>
    <string name="request_add_friend_msg">捎一句话给Ta呗</string>
    <string name="et_input_hint">请输入不超过20字符[默认:你好]</string>
    <string name="defualt_msg_add_friend">你好!</string>
    <string name="send_request_add_friend_ok">发送成功,等待对方回复.</string>
    <string name="newFriend">新朋友</string>
    <string name="friend_state_accept">已同意</string>
    <string name="friend_state_refuse">已拒绝</string>
    <string name="friend_state_unprocessed">接受</string>
    <string name="friend_request_from">来自%s</string>
    <string name="friend_request_undo">不处理</string>
    <string name="friend_request_accpet">同意</string>
    <string name="friend_request_refuse">拒绝</string>
    <string name="friend_request_title">好友请求</string>
    <string name="option_faild_and_try">网络出差错了，再试试呗</string>
    <string name="date_format_HHmm">HH:mm</string>
    <string name="message_image">[图片]</string>
    <string name="message_file">[文件]</string>
    <string name="message_audio">[语音]</string>
    <string name="message_video">[视频]</string>
    <string name="message_location">[位置]</string>
    <string name="yesdaytime">昨天 "%s"</string>
    <string name="string_send">发送</string>
    <string name="takephoto">照相</string>
    <string name="press_speek">按住说话</string>
    <string name="message_input">请输入消息内容</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="audio">语音</string>
    <string name="attach">附件</string>
    <string name="message_not_null">输入消息不能为空</string>
    <string name="message_too_long">字数不能超过5000</string>
    <string name="tip_im_connect_ing">IM连接中...</string>
    <string name="tip_im_connect_success">IM连接成功</string>
    <string name="tip_im_connect_failed">IM连接失败，帐号异常（被移除了、未登录等）</string>
    <string name="tip_im_connect_interrupt_account_error">IM连接中断了，帐号在其他设备登录了</string>
    <string name="tip_im_connect_interrupt_net_error">IM连接中断了（网络故障或者服务器故障等原因）</string>
    <string name="tip_load_ing">加载中</string>
    <string name="tip_load_failed">加载失败</string>
    <string name="btn_re_load">重新加载</string>
    <string name="txt_i_known">我知道了</string>
    <string name="selects">完成(%s)</string>
    <string name="selectmore9">选择图片不能超过9张</string>
    <string name="file">文件</string>
    <string name="songkai_send">松开即可结束发送</string>
    <string name="too_short_tosend">录制的声音太短无法发送</string>
    <string name="permissiontip">没有授予相关权限本功能限制使用，如需使用请在应用设置中设置相关权限后，重新启动应用后再使用</string>
    <string name="pselect">请选择</string>
    <string name="takecamera">拍照</string>
    <string name="takevideo">摄像</string>
    <string name="filetoobig">抱歉，不支持发送太大的文件</string>
    <string name="remaintimetip">剩余时间倒计时</string>
    <string name="remaintime">"%d"S</string>
    <string name="addgroupmember">添加成员</string>
    <string name="Video_footage">视频</string>
    <string name="tip_file_download">下载中</string>
    <string name="tip_file_downloaded">下载完成</string>
    <string name="tip_file_downloadfail">下载失败</string>
    <string name="creategroupok">建群成功</string>
    <string name="invitejoingroup" formatted="false">%s 邀请了 %s 入群</string>
    <string name="invite" formatted="false">%s 邀请了 %s 入群</string>
    <string name="changegroupname" formatted="false">"%s" 修改群名为 %s </string>
    <string name="somejoingroup">"%s" 加入了群聊 </string>
    <string name="somejoingroupchat">有人加入了群聊 </string>
    <string name="groupnamechanged">群名已修改</string>
    <string name="groupnoticchange">群通知已修改</string>
    <string name="somegroupnoticchange" formatted="false">"%s" 修改了群公告:"%s"</string>
    <string name="someisnewgroupowner">"%s" 成为新群主</string>
    <string name="someleavegroup">"%s"离开了群</string>
    <string name="youberomoved">你已经被移除</string>
    <string name="delallgroupmember">群成员已被全部删除，群组已自动解散~</string>
    <string name="groupareremoved">群已被 "%s" 解散了</string>
    <string name="toast_permission_deny">用户禁用了相关权限，导致功能无法使用</string>
    <string name="txt_time_format_m_d">MM月dd日</string>
    <string name="tip_play_fail">网络或资源问题,播放失败，请稍后重试</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="copynow">已复制</string>
    <string name="downloading">下载中</string>
    <string name="downloaded">下载完成</string>
    <string name="save">保存</string>
    <string name="saveok">保存成功</string>
    <string name="savefail">保存失败</string>
    <string name="nomore">没有更多了</string>
    <string name="camerapic">相册胶卷</string>
    <string name="btPublish">发送</string>
    <string name="hint_add_event_content">请输入发表内容...</string>
    <string name="exist_eidt_publish">退出此次编辑?</string>
    <string name="str_text_image_null">请输入内容或选图</string>
    <string name="str_user_not_login">请先登录</string>
    <string name="str_user_not_login_pulish">请先登录后操作哦</string>
    <string name="upload_image_progress">(%s/%s)  %s%</string>
    <string name="upload_image">正在上传</string>
    <string name="str_deal_image_error">处理图片出错</string>
    <string name="str_send_fial">发送失败</string>
    <string name="str_send_wait">请稍等</string>
    <string name="str_null_and_retry">没有数据,要不重试?</string>
    <string name="str_retry">点我重试</string>
    <string name="defualt_userName">#UserName#</string>
    <string name="hint_write_comment">我也来说一句...</string>
    <string name="str_love">喜欢</string>
    <string name="input_not_null">请输入内容</string>
    <string name="submit_success">发表成功</string>
    <string name="submit_success_v2">保存成功</string>
    <string name="submit_fail">发表失败,请重试</string>
    <string name="submit_fail_v2">保存失败,请重试</string>
    <string name="str_a_t">@</string>
    <string name="str_reflesh_error">刷新失败,请重试</string>
    <string name="str_onload_error">加载更多失败</string>
    <string name="str_reflsh_no_new_data">没有最新的数据了</string>
    <string name="refresh_footer_nothing">没有更多数据了</string>
    <string name="str_user_info_get_error">获取用户失败</string>
    <string name="str_vote">投票</string>
    <string name="str_chose_user_type">欢迎,请选择您的身份</string>
    <string name="str_chose_user_type_v2">请选择身份</string>
    <string name="str_finish">完成</string>
    <string name="str_eixt_user_setting">确定退出身份设置?</string>
    <string name="str_update_password_success">修改成功</string>
    <string name="str_futrue_setting">以后设置</string>
    <string name="str_now_setting">现在设置</string>
    <string name="str_phone_exist">该账号已被注册，是否去登陆?</string>
    <string name="str_try_other_phone">请换其他账号注册</string>
    <string name="str_collection">收藏</string>
    <string name="str_my_collection">我的收藏</string>
    <string name="str_other_collection">Ta的收藏</string>
    <string name="str_empty_collection">好像没有收藏数据哦</string>
    <string name="str_title_vote">确定不投票了？</string>
    <string name="str_vote_success">已投票</string>
    <string name="str_vote_normal">投票</string>
    <string name="str_ed_my_info">编辑个人资料</string>
    <string name="str_system_setting">系统设置</string>
    <string name="str_feedback">意见反馈</string>
    <string name="str_my_dynamic">我的动态</string>
    <string name="str_about_cuckoo">关于布谷</string>
    <string name="hint_write_feeback">请写下你的反馈意见或者帮助内容</string>
    <string name="anonymous">*#匿名#*</string>
    <string name="str_feedback_success">感谢您的反馈意见</string>
    <string name="str_account_setting">账号与隐私设置</string>
    <string name="str_exist_login">退出登录</string>
    <string name="str_current_version">当前版本:%s</string>
    <string name="str_accpet_push">推送通知</string>
    <string name="str_check_new_version">检查最新版本</string>
    <string name="str_user_image">个人头像</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_identity">身份</string>
    <string name="str_change_password">修改密码</string>
    <string name="str_social_platform">社交平台绑定</string>
    <string name="str_my_phone">手机号码</string>
    <string name="str_platform_wechat">微信</string>
    <string name="str_platform_qq">QQ</string>
    <string name="str_msg_voice">消息声音</string>
    <string name="str_bind_newphone">绑定新号码</string>
    <string name="str_bindnew_step_1">更换当前手机号码\n然后使用新手机号码及当前密码登陆</string>
    <string name="str_bindnew_step_2">请接收新号码%s的验证码</string>
    <string name="str_input_new_phone">请输入新手机号码</string>
    <string name="str_next_step">背面</string>
    <string name="str_next_step_style1">下一步</string>
    <string name="str_pre_step">正面</string>
    <string name="str_input_current_phone">请输入当前手机号码</string>
    <string name="str_input_current_phone_error">输入当前与登陆账号不一致</string>
    <string name="str_input_new_phone_error">输入新号码与当前号码相同</string>
    <string name="str_bind_new_is_exsit">新号码已被注册</string>
    <string name="str_bind_new_error">出现异常，请重试</string>
    <string name="str_new_bind_tip">请接收%s的验证码</string>
    <string name="str_input_code_null">请输入验证码</string>
    <string name="hint_et_current_password">请输入旧密码</string>
    <string name="hint_et_new_password">请输入新密码</string>
    <string name="str_new_old_password_same">输入新旧密码不能相同</string>
    <string name="str_change_passowrd_error">修改失败，请重试一下</string>
    <string name="str_change_passowrd_success">新密码修改成功</string>
    <string name="str_app_version_is_new">当前已是最新版本</string>
    <string name="str_app_version_get_error">获取版本信息失败，请重试</string>
    <string name="str_update_title">发现新版本</string>
    <string name="str_update_button">马上更新</string>
    <string name="str_update_progress_title">正在更新,请稍后</string>
    <string name="str_download_fail">下载失败</string>
    <string name="str_download_stop">暂停下载</string>
    <string name="str_download_finish">下载完成，请安装</string>
    <string name="str_download_install">安装</string>
    <string name="str_download_redownload">重新下载</string>
    <string name="str_check_apk_info">正在检查安装文件</string>
    <string name="str_download_apk_not_belong">非官方安装包，不能安装</string>
    <string name="str_download_apk_is_safy">检查完毕，请安装</string>
    <string name="str_download_apk_is_old">该版本是旧版本，不需要安装</string>
    <string name="str_close">关闭</string>
    <string name="str_download_is_deleted">文件已被删除</string>
    <string name="str_download_apk_is_error">安装文件出错，不能安装</string>
    <string name="str_install_error">安装失败</string>
    <string name="str_logout_fail">退出登录失败，请重试</string>
    <string name="str_terms_of_service">服务条款</string>
    <string name="str_introduction">功能介绍</string>
</resources>