<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/personal_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:fitsSystemWindows="false">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="?actionBarSize"
                    android:scaleType="centerCrop"

                    android:src="@mipmap/photo"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="1dp" />


                <TextView
                    android:id="@+id/str_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_user"
                    android:layout_marginLeft="@dimen/frgment_login_16dp"
                    android:layout_marginRight="@dimen/frgment_login_16dp"
                    android:layout_marginTop="@dimen/common_8dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/str_user_notlogin_sign"
                    android:textColor="@color/tab_bgcolor"
                    android:textSize="@dimen/fragment_font_14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_below="@id/str_user_name"
                    android:layout_marginTop="@dimen/frgment_login_24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btCollection"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_collection_while"
                        android:gravity="center_horizontal"
                        android:text="@string/str_collection"
                        android:textColor="@color/tab_bgcolor"
                        android:textSize="@dimen/fragment_font_14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_mutual_eachother"
                        android:gravity="center_horizontal"
                        android:text="关注"
                        android:textColor="@color/tab_bgcolor"
                        android:textSize="@dimen/fragment_font_14sp" />

                    <TextView
                        android:id="@+id/btnMessage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_message_normal"
                        android:gravity="center_horizontal"
                        android:text="@string/tab_message"
                        android:textColor="@color/tab_bgcolor"
                        android:textSize="@dimen/fragment_font_14sp" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="?actionBarSize"
                android:background="@color/colorBg"
                android:orientation="vertical"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_16dp"
                    android:background="@color/whiles" />
                <TextView
                    android:id="@+id/btMyDynamic"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/selector_text_bg"
                    android:drawableLeft="@drawable/ic_my_publish"
                    android:drawablePadding="@dimen/common_16dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_16dp"
                    android:text="@string/str_my_dynamic"
                    android:textColor="@color/colorFrist"
                    android:textSize="@dimen/fragment_font_16sp" />

                <!--<View
                    android:layout_width="match_parent"
                    android:background="@drawable/recycle_line_divider_padding_16_v2"
                    android:layout_height="8dp"/>-->

                <TextView
                    android:id="@+id/btMyVote"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/selector_text_bg"
                    android:drawableLeft="@drawable/ic_bid"
                    android:drawablePadding="@dimen/common_16dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_16dp"
                    android:text="我的投票"
                    android:textColor="@color/colorFrist"
                    android:textSize="@dimen/fragment_font_16sp" />

                <TextView
                    android:id="@+id/btFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/common_4dp"
                    android:background="@drawable/selector_text_bg"
                    android:drawableLeft="@drawable/ic_feedback"
                    android:drawablePadding="@dimen/common_16dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_16dp"
                    android:text="@string/str_feedback"
                    android:textColor="@color/colorFrist"
                    android:textSize="@dimen/fragment_font_16sp" />
              <!--  <View
                    android:layout_width="match_parent"
                    android:background="@drawable/recycle_line_divider_padding_16_v2"
                    android:layout_height="1dp"/>-->

                <TextView
                    android:id="@+id/btAboutCuckoo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/selector_text_bg"
                    android:drawableLeft="@drawable/ic_about_cuckoo"
                    android:drawablePadding="@dimen/common_16dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_16dp"
                    android:text="@string/str_about_cuckoo"
                    android:textColor="@color/colorFrist"
                    android:textSize="@dimen/fragment_font_16sp" />

                <TextView
                    android:id="@+id/btSetting"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/selector_text_bg"
                    android:drawableLeft="@drawable/ic_setting"
                    android:drawablePadding="@dimen/common_16dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_16dp"
                    android:text="@string/str_system_setting"
                    android:textColor="@color/colorFrist"
                    android:textSize="@dimen/fragment_font_16sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--  <android.support.v7.widget.Toolbar
          android:id="@+id/class_toolbar"
          android:layout_width="match_parent"
          android:layout_height="?actionBarSize"
          android:fitsSystemWindows="false">

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="right"
              android:layout_marginRight="@dimen/frgment_login_16dp"
              android:src="@drawable/ic_setting" />
      </android.support.v7.widget.Toolbar>-->


</android.support.design.widget.CoordinatorLayout>